# nginx-cmake

./: .gitmodules  CMakeLists.txt  README.md  nginx-1.2.8.patch  nginx-patch-with-device.sh  nginx-remote-check.sh
